src/index.css
/* ... */
body .loader-wrapper .ball-line:nth-child(3) {
  width: 85%;
  height: 40%;
  -webkit-transform: rotate(180deg);
          transform: rotate(180deg);
  border-radius: 50%;
  background: transparent;
  /* border: 4px solid #ac4b07; */
  bottom: -10px;
}
body .loader-wrapper .ball-line:nth-child(4) {
  top: 50%;
  margin-top: -2px;
  -webkit-transform: rotate(90deg);
          transform: rotate(90deg);
}
@-webkit-keyframes ball {
  from,to {
    -webkit-transform: rotate(0deg);
            transform: rotate(0deg);
  }
  50% {
    -webkit-transform: rotate(360deg);
            transform: rotate(360deg);
  }
}
@keyframes ball {
  from,to {
    -webkit-transform: rotate(0deg);
            transform: rotate(0deg);
  }
  50% {
    -webkit-transform: rotate(360deg);
            transform: rotate(360deg);
  }
}
@-webkit-keyframes floor_move {
  from,to {
    left: 50px;
  }
  50% {
    left: -264.159265359px;
  }
}
@keyframes floor_move {
  from,to {
    left: 50px;
  }
  50% {
    left: -264.159265359px;
  }
}
body .heading-sprite {
  background: transparent url('shared/images/HeadingSprite.png') no-repeat 0 0;
  background-size: cover;
  margin: 0 0 50px 0 !important;
  padding: 0;
  height: auto;
  width: 230px;
}
@media (min-width: 992px) {
  body .heading-sprite {
    width: 430px;
  }
}
body .section-block {
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  display: flex;
  flex-direction: column;
  height: 100vh;
  justify-content: center;
  position: relative;
  width: 100vw;
}
/* @media (orientation: landscape) {
  body .section-block {
    height: auto;
  }
} */
body .section-block.text-white {
  color: #fff;
}
body .section-block.text-black {
  color: #000;
}
body .section-block.text-purple {
  color: #9999ff;
}
body .section-block .title-and-description-block {
  padding: 32px;
  width: 100vw;
}
@media (min-width: 992px) {
  body .section-block .title-and-description-block {
  }
}
body .section-block .title-and-description-block.shift-left,
body .section-block .title-and-description-block.shift-right {
  box-sizing: border-box;
  display: block;
  flex-direction: column;
  height: 100%;
  justify-content: flex-start;
}
@media (min-width: 992px) {
  body .section-block .title-and-description-block.shift-left,
  body .section-block .title-and-description-block.shift-right {
    display: flex;
  }
}
body .section-block .title-and-description-block.shift-left {
  text-align: left;
}
@media (min-width: 992px) {
  body .section-block .title-and-description-block.shift-left {
    padding-right: 33vw;
  }
}
@media (min-width: 1200px) {
  body .section-block .title-and-description-block.shift-left {
    padding-right: 44vw;
  }
}
body .section-block .title-and-description-block.shift-right {
  text-align: right;
}
@media (min-width: 992px) {
  body .section-block .title-and-description-block.shift-right {
    padding-left: 33vw;
  }
}
@media (min-width: 1200px) {
  body .section-block .title-and-description-block.shift-right {
    padding-left: 44vw;
  }
}
body .section-block p {
  margin: 0;
}
body .section-block .title-and-description-block .title-1 {
  font-size: 24px;
  line-height: 20px;
  margin-bottom: 20px;
}
@media (min-width: 992px) {
  body .section-block .title-and-description-block .title-1 {
    font-size: 52px;
    line-height: 48px;
    margin-bottom: 30px;
  }
}
body .section-block .title-and-description-block .title-2 {
  /* font-family: 'shapiro95_super_wide';
  font-size: 26px;
  line-height: 22px; */
  font-size: 120px;
  line-height: 100px;
  margin-bottom: 15px;
}
@media (min-width: 992px) {
  body .section-block .title-and-description-block .title-2 {
    /* font-size: 76px;
    line-height: 72px; */
    font-size: 250px;
    line-height: 200px;
    margin-bottom: 30px;
  }
}
@media (min-width: 992px) {
  body .section-block .title-and-description-block .title-2 .the {
    opacity: 0.5;
  }
}
body .section-block .title-and-description-block .description {
  font-size: 16px;
  line-height: 20px;
}
@media (min-width: 992px) {
  body .section-block .title-and-description-block .description {
    font-size: 20px;
    line-height: 26px;
  }
}
/* .section-block.text-white .title-and-description-block .title-1,
.section-block.text-white .title-and-description-block .title-2,
.section-block.text-white .title-and-description-block .description {
    text-shadow: 0 0 5px #000;
}
.section-block.text-black .title-and-description-block .title-1,
.section-block.text-black .title-and-description-block .title-2,
.section-block.text-black .title-and-description-block .description {
    text-shadow: 0 0 5px #FFF;
} */
body .section-block .title-and-description-block .bottomline {
  display: none;
  position: absolute;
  z-index: 1;
}
@media (min-width: 992px) {
  body .section-block .title-and-description-block .bottomline {
    display: block;
  }
}
/* FREE SESSION MODAL */
body .free-session-modal {
}
body .free-session-modal .title {
  font-family: 'shapiro95_super_wide';
  font-size: 24px;
  text-align: center;
}

/* HOMEPAGE */
body .make-sport-your-lifestyle {
  background-image: url('screens/homepage/images/make-sport-your-lifestyle.jpg');
}
@media (min-width: 992px) {
  body .make-sport-your-lifestyle {
    background-attachment: fixed;
  }
}
body .make-sport-your-lifestyle::after {
  content: '';
  background: rgba(0, 0, 0, 0.4);
  display: block;
  height: 100vh;
  width: 100vw;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 0;
}
body .make-sport-your-lifestyle .title-and-buttons-block {
  padding: 0 32px;
  position: relative;
  text-align: center;
  z-index: 1;
}
@media (min-width: 992px) {
  body .make-sport-your-lifestyle .title-and-buttons-block {
  }
}
body .make-sport-your-lifestyle .title-and-buttons-block .title {
  animation: 2000ms ease-out 500ms 1 both topFadeInAndSlideIn;
  font-size: 30px;
  line-height: 36px;
  margin-bottom: 80px;
}
/* ... */

